--- a/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
+++ b/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_filtered = df[(df.aspect.str.len() > 1) & (~df.aspect.isin(aspects_to_remove))]#.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -734,13 +745,13 @@
        "18844             summit   0.004458         3          673"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df.aspect.str.len() > 1) & (~df.aspect.isin(aspects_to_remove))].head(50)"
+    "df_filtered.head(50)"
    ]
   },
   {
