next steps update

--- a/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
+++ b/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
@@ -789,7 +789,7 @@
     "\n",
     "##1. Change aspects (noun and noun phases) -> concepts\n",
     "##2. Extend approach with type of connection between EDU (clausses)\n",
-    "##3. Compare aspects derived for different\n",
+    "##3. Compare aspects derived for different sources, timeframes, topics etc.\n",
     "##4. Build the timeline of aspects and sentiment orientation "
    ]
   },
