updated work in progress

--- a/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
+++ b/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
@@ -1029,7 +1029,7 @@
    "metadata": {},
    "source": [
     "## Problems\n",
-    "###1. Time of parsing [Rhetorical Parsing]"
+    "### 1. Time of parsing [Rhetorical Parsing] - some articles parse couple of minutes"
    ]
   },
   {
@@ -1040,10 +1040,12 @@
    "source": [
     "## Next steps and improvements\n",
     "\n",
-    "###1. Change aspects (noun and noun phases) -> concepts\n",
-    "###2. Extend approach with type of connection between EDU (clausses)\n",
-    "###3. Compare aspects derived for different sources, timeframes, topics etc.\n",
-    "###4. Build the timeline of aspects and sentiment orientation "
+    "### 1. CNN aspect extractor - work in progress\n",
+    "### 2. Consider concepts rather than aspects (noun and noun phases)\n",
+    "### 3. Compare aspects derived for different sources, timeframes, topics etc.\n",
+    "### 4. Build the timeline of aspects and sentiment orientation \n",
+    "\n",
+    "### 5. Extend approach with type of connection between EDU (clausses)"
    ]
   },
   {
@@ -1072,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
