uk and u.k. explanation minor changes in descriptions

--- a/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
+++ b/JSI_articles_brexit_sentiment_aspects_one_event.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rhetorical and sentiment analysis"
+    "# Rhetorical and sentiment analysis for News Bias"
    ]
   },
   {
@@ -153,39 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0,\n",
-       " {'raw_text': u'tx david cameron will face eu leaders today for the first time',\n",
-       "  'sentiment': array([1]),\n",
-       "  'source_document_id': 0,\n",
-       "  'tokens': [{'is_stop': False, 'lemma': u'tx', 'pos': u'ADP', 'text': u'tx'},\n",
-       "   {'is_stop': False, 'lemma': u'david', 'pos': u'PROPN', 'text': u'david'},\n",
-       "   {'is_stop': False, 'lemma': u'cameron', 'pos': u'NOUN', 'text': u'cameron'},\n",
-       "   {'is_stop': True, 'lemma': u'will', 'pos': u'VERB', 'text': u'will'},\n",
-       "   {'is_stop': False, 'lemma': u'face', 'pos': u'VERB', 'text': u'face'},\n",
-       "   {'is_stop': False, 'lemma': u'eu', 'pos': u'NOUN', 'text': u'eu'},\n",
-       "   {'is_stop': False, 'lemma': u'leader', 'pos': u'NOUN', 'text': u'leaders'},\n",
-       "   {'is_stop': False, 'lemma': u'today', 'pos': u'NOUN', 'text': u'today'},\n",
-       "   {'is_stop': True, 'lemma': u'for', 'pos': u'ADP', 'text': u'for'},\n",
-       "   {'is_stop': True, 'lemma': u'the', 'pos': u'DET', 'text': u'the'},\n",
-       "   {'is_stop': True, 'lemma': u'first', 'pos': u'ADJ', 'text': u'first'},\n",
-       "   {'is_stop': False, 'lemma': u'time', 'pos': u'NOUN', 'text': u'time'}]})"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sent_edu.items()[0]"
+    "# sent_edu.items()[0]"
    ]
   },
   {
@@ -400,6 +374,27 @@
    ],
    "source": [
     "df_filtered[df_filtered.aspect.isin(['great britain', 'united kingdom', 'uk', 'u.k'])].sort_values('pagerank', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why so opposite sentiment related to different version of UK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"uk-usa.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"u.k.britain.png\">"
    ]
   },
   {
@@ -1028,8 +1023,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problems\n",
-    "### 1. Time of parsing [Rhetorical Parsing] - some articles parse couple of minutes"
+    "# Problems\n",
+    "\n",
+    "### 1. Time of parsing [Rhetorical Parsing] - some articles parse couple of minutes\n",
+    "### 2. Aspect extraction method need an improvement."
    ]
   },
   {
@@ -1038,7 +1035,7 @@
     "collapsed": true
    },
    "source": [
-    "## Next steps and improvements\n",
+    "# Next steps and improvements\n",
     "\n",
     "### 1. CNN aspect extractor - work in progress\n",
     "### 2. Consider concepts rather than aspects (noun and noun phases)\n",
@@ -1047,15 +1044,6 @@
     "\n",
     "### 5. Extend approach with type of connection between EDU (clausses)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
