--- a/spacy-ner-first-results-brexit.ipynb
+++ b/spacy-ner-first-results-brexit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rhetorical and sentiment analysis "
+    "# Rhetorical and Sentiment Analysis for News Bias"
    ]
   },
   {
