imgs updated in notebook

--- a/brexit-prototype-analysis.ipynb
+++ b/brexit-prototype-analysis.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import simplejson\n",
@@ -38,9 +36,9 @@
     "from operator import itemgetter\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import sys\n",
-    "sys.path.append(\"/root/sa/edu_dependency_parser/src\")\n",
-    "from trees.parse_tree import ParseTree\n",
+    "# import sys\n",
+    "# sys.path.append(\"/root/sa/edu_dependency_parser/src\")\n",
+    "# from trees.parse_tree import ParseTree\n",
     "\n",
     "from wordcloud import WordCloud\n",
     "\n",
@@ -49,14 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from spacy.en import English\n",
-    "nlp = English()"
+    "# from spacy.en import English\n",
+    "# nlp = English()"
    ]
   },
   {
@@ -98,10 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# data_path = '/datasets/sentiment/aspects/results-brexit/results/brexit-news-all/'\n",
@@ -110,10 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_serialized(f_path, f_name):\n",
@@ -124,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "aspect_graph = load_serialized(data_path, 'aspects_graph')"
@@ -154,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# sent_edu.items()[0]"
@@ -172,9 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "aspect_edu = load_serialized(data_path, 'aspects_per_edu')"
@@ -190,9 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def graph_stats(graph):\n",
@@ -245,9 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -272,9 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "aspects_to_remove = ['day', 'days', 'week', 'weeks', 'month', 'months', 'year', 'years', 'monday', 'tuesday', 'wednesday', \n",
@@ -285,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_filtered = df[(df.aspect.str.len() > 1) & (~df.aspect.isin(aspects_to_remove))]#.head(50)"
@@ -303,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -387,14 +363,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"uk-usa.png\">"
+    "#### US Sources - negative sentiment toward United Kingdom"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"u.k.britain.png\">"
+    "<img src=\"images/uk-usa.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### UK Sources - positive sentiment toward United Kingdom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/u.k.britain.png\">"
    ]
   },
   {
@@ -407,9 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def draw_wordcloud(counts):\n",
@@ -423,9 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -913,9 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def draw_top_aspects_by_col(df=df_filtered, col='pagerank', top_n=100, ascending=False, pagerank_min=0.0005):\n",
@@ -935,9 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -971,9 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1000,9 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1025,8 +1003,8 @@
    "source": [
     "# Problems\n",
     "\n",
-    "### 1. Time of parsing [Rhetorical Parsing] - some articles parse couple of minutes\n",
-    "### 2. Aspect extraction method need an improvement."
+    "### 1. Time of parsing [Rhetorical Parsing] - some articles parse couple of minutes - done\n",
+    "### 2. Aspect extraction method need an improvement. - NER, ConceptNet based extraction"
    ]
   },
   {
@@ -1038,12 +1016,21 @@
     "# Next steps and improvements\n",
     "\n",
     "### 1. CNN aspect extractor - work in progress\n",
-    "### 2. Consider concepts rather than aspects (noun and noun phases)\n",
-    "### 3. Compare aspects derived for different sources, timeframes, topics etc.\n",
+    "### 2. Consider concepts rather than aspects (noun and noun phrases) - extended\n",
+    "### 3. Compare attributes derived from different sources, timeframes, topics, etc.\n",
     "### 4. Build the timeline of aspects and sentiment orientation \n",
     "\n",
-    "### 5. Extend approach with type of connection between EDU (clausses)"
+    "### 5. Extend approach with type of connection between EDU (clauses)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1062,9 +1049,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
